--- a/index.html
+++ b/index.html
@@ -7,182 +7,186 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>🐠 金魚養殖經驗交流分享</h1>
-    <nav class="navbar">
-      <div class="menu-toggle" id="mobile-menu">☰</div>
-      <ul class="nav-list">
+
+  <!-- 側邊導覽欄 -->
+  <aside class="sidebar" id="sidebar">
+    <div class="logo">🐠 金魚學苑</div>
+    <div class="menu-toggle" id="mobile-menu">☰</div>
+
+    <nav>
+      <ul>
         <li>
-          <a href="#">🐟 入門篇</a>
-          <ul class="dropdown">
-            <li><a href="#">簡化養金魚方式</a></li>
-            <li><a href="#">養魚的思考</a></li>
-            <li><a href="#">溝通的問題</a></li>
-            <li><a href="#">金魚基本飼養方式及配備</a></li>
-            <li><a href="#">新手必看視頻</a></li>
-            <li><a href="#">為什麼要換水</a></li>
-            <li><a href="#">水費貴嗎</a></li>
-            <li><a href="#">打氣機的作用</a></li>
-            <li><a href="#">濾材問題</a></li>
-            <li><a href="#">濾材的選擇</a></li>
-            <li><a href="#">濾材為什麼不要泡水</a></li>
-            <li><a href="#">養魚方法真的百百種嗎</a></li>
-            <li><a href="#">魚友經驗分享</a></li>
-            <li><a href="#">金魚養殖鑑古推今</a></li>
-            <li><a href="#">金魚店推薦</a></li>
+          <span>🐟 入門篇</span>
+          <ul>
+            <li>簡化養金魚方式</li>
+            <li>養魚的思考</li>
+            <li>溝通的問題</li>
+            <li>金魚基本飼養方式及配備</li>
+            <li>新手必看視頻</li>
+            <li>為什麼要換水</li>
+            <li>水費貴嗎</li>
+            <li>打氣機的作用</li>
+            <li>濾材問題</li>
+            <li>濾材的選擇</li>
+            <li>濾材為什麼不要泡水</li>
+            <li>養魚方法真的百百種嗎</li>
+            <li>魚友經驗分享</li>
+            <li>金魚養殖鑑古推今</li>
+            <li>金魚店推薦</li>
           </ul>
         </li>
 
         <li>
-          <a href="#">🐟 日常操作</a>
-          <ul class="dropdown">
-            <li><a href="#">換水</a></li>
-            <li><a href="#">隔離換水的用意</a></li>
-            <li><a href="#">正常換水為什麼水還是霧</a></li>
-            <li><a href="#">清缸建議方式</a></li>
-            <li><a href="#">移缸建議分享</a></li>
-            <li><a href="#">夏季魚缸應對高溫注意事項</a></li>
-            <li><a href="#">夏季高溫換水應變方式</a></li>
-            <li><a href="#">夏季注意事項</a></li>
-            <li><a href="#">普力桶尺寸</a></li>
-            <li><a href="#">下鹽</a></li>
-            <li><a href="#">下鹽計算機</a></li>
-            <li><a href="#">魚缸水循環計算器</a></li>
-            <li><a href="#">出國出遠門應變措施</a></li>
-            <li><a href="#">出國回國魚缸經驗分享</a></li>
-            <li><a href="#">出國前操作-影片</a></li>
-            <li><a href="#">回國後操作-影片</a></li>
-            <li><a href="#">颱風天的養魚對應措施</a></li>
-            <li><a href="#">颱風天為何禁食</a></li>
-            <li><a href="#">家庭溢流案例分享</a></li>
+          <span>🐟 日常操作</span>
+          <ul>
+            <li>換水</li>
+            <li>隔離換水的用意</li>
+            <li>正常換水為什麼水還是霧</li>
+            <li>清缸建議方式</li>
+            <li>移缸建議分享</li>
+            <li>夏季魚缸應對高溫注意事項</li>
+            <li>夏季高溫換水應變方式</li>
+            <li>夏季注意事項</li>
+            <li>普力桶尺寸</li>
+            <li>下鹽</li>
+            <li>下鹽計算機</li>
+            <li>魚缸水循環計算器</li>
+            <li>出國出遠門應變措施</li>
+            <li>出國回國魚缸經驗分享</li>
+            <li>出國前操作-影片</li>
+            <li>回國後操作-影片</li>
+            <li>颱風天的養魚對應措施</li>
+            <li>颱風天為何禁食</li>
+            <li>家庭溢流案例分享</li>
           </ul>
         </li>
 
         <li>
-          <a href="#">🐟 買魚注意</a>
-          <ul class="dropdown">
-            <li><a href="#">新魚入缸知識</a></li>
-            <li><a href="#">檢疫新魚重點</a></li>
-            <li><a href="#">檢疫篇</a></li>
-            <li><a href="#">檢疫的重要性</a></li>
-            <li><a href="#">金魚檢疫必備品</a></li>
-            <li><a href="#">養魚從買魚開始1 基本判斷</a></li>
-            <li><a href="#">養魚從買魚開始2 檢疫原理</a></li>
-            <li><a href="#">養魚從買魚開始3 我不是韭菜大作戰</a></li>
-            <li><a href="#">魚趴案例</a></li>
-            <li><a href="#">如何翻鰓</a></li>
-            <li><a href="#">無濾材檢疫全紀錄1</a></li>
-            <li><a href="#">無濾材檢疫全紀錄2</a></li>
-            <li><a href="#">檢疫紀錄</a></li>
+          <span>🐟 買魚注意</span>
+          <ul>
+            <li>新魚入缸知識</li>
+            <li>檢疫新魚重點</li>
+            <li>檢疫篇</li>
+            <li>檢疫的重要性</li>
+            <li>金魚檢疫必備品</li>
+            <li>養魚從買魚開始1 基本判斷</li>
+            <li>養魚從買魚開始2 檢疫原理</li>
+            <li>養魚從買魚開始3 我不是韭菜大作戰</li>
+            <li>魚趴案例</li>
+            <li>如何翻鰓</li>
+            <li>無濾材檢疫全紀錄1</li>
+            <li>無濾材檢疫全紀錄2</li>
+            <li>檢疫紀錄</li>
           </ul>
         </li>
 
         <li>
-          <a href="#">🚩 飼料</a>
-          <ul class="dropdown">
-            <li><a href="#">飼料選擇及保存</a></li>
-            <li><a href="#">季節與餵食 / 飼料類型</a></li>
-            <li><a href="#">若元錠使用方式</a></li>
-            <li><a href="#">飼料推薦</a></li>
-            <li><a href="#">高夠力金魚飼料</a></li>
-            <li><a href="#">鮮蝦食譜</a></li>
-            <li><a href="#">德比克飼料</a></li>
-            <li><a href="#">阿岳金魚飼料</a></li>
-            <li><a href="#">赤蟲解凍餵食</a></li>
-            <li><a href="#">赤蟲哪裡買</a></li>
+          <span>🚩 飼料</span>
+          <ul>
+            <li>飼料選擇及保存</li>
+            <li>季節與餵食 / 飼料類型</li>
+            <li>若元錠使用方式</li>
+            <li>飼料推薦</li>
+            <li>高夠力金魚飼料</li>
+            <li>鮮蝦食譜</li>
+            <li>德比克飼料</li>
+            <li>阿岳金魚飼料</li>
+            <li>赤蟲解凍餵食</li>
+            <li>赤蟲哪裡買</li>
           </ul>
         </li>
 
         <li>
-          <a href="#">💎 小知識</a>
-          <ul class="dropdown">
-            <li><a href="#">金魚成長要素</a></li>
-            <li><a href="#">光照</a></li>
-            <li><a href="#">藻類的危害</a></li>
-            <li><a href="#">泰獅圖鑑</a></li>
-            <li><a href="#">蘭壽圖鑑</a></li>
-            <li><a href="#">金魚族譜</a></li>
-            <li><a href="#">繁殖日記</a></li>
+          <span>💎 金魚小知識</span>
+          <ul>
+            <li>金魚成長要素</li>
+            <li>光照</li>
+            <li>藻類的危害</li>
+            <li>泰獅圖鑑</li>
+            <li>蘭壽圖鑑</li>
+            <li>金魚族譜</li>
+            <li>繁殖日記</li>
           </ul>
         </li>
 
         <li>
-          <a href="#">📚 過濾配置</a>
-          <ul class="dropdown">
-            <li><a href="#">硝化菌</a></li>
-            <li><a href="#">陶瓷環對比圖</a></li>
-            <li><a href="#">濾材量的知識點</a></li>
-            <li><a href="#">濾材吸水量測試</a></li>
-            <li><a href="#">過濾和濾材水流原理</a></li>
-            <li><a href="#">滴流盒配置</a></li>
-            <li><a href="#">二尺缸配置</a></li>
-            <li><a href="#">三尺上部</a></li>
-            <li><a href="#">三尺底濾</a></li>
-            <li><a href="#">四尺上部</a></li>
-            <li><a href="#">四尺底濾</a></li>
-            <li><a href="#">五尺缸配置</a></li>
-            <li><a href="#">七尺缸配置實例</a></li>
-            <li><a href="#">雅柏</a></li>
+          <span>📚 過濾配置</span>
+          <ul>
+            <li>硝化菌</li>
+            <li>陶瓷環對比圖</li>
+            <li>濾材量的知識點</li>
+            <li>濾材吸水量測試</li>
+            <li>過濾和濾材水流原理</li>
+            <li>滴流盒配置</li>
+            <li>二尺缸配置</li>
+            <li>三尺上部</li>
+            <li>三尺底濾</li>
+            <li>四尺上部</li>
+            <li>四尺底濾</li>
+            <li>五尺缸配置</li>
+            <li>七尺缸配置實例</li>
+            <li>雅柏</li>
           </ul>
         </li>
 
         <li>
-          <a href="#">💰 魚缸設備</a>
-          <ul class="dropdown">
-            <li><a href="#">設備群</a></li>
-            <li><a href="#">金魚燈具選擇</a></li>
-            <li><a href="#">養魚實用好物</a></li>
-            <li><a href="#">打氣機安裝方式</a></li>
-            <li><a href="#">魚缸水體換算</a></li>
-            <li><a href="#">測溫器接三胞胎方式</a></li>
-            <li><a href="#">浴室水龍頭接溫度計範例</a></li>
-            <li><a href="#">魚缸對應沉馬</a></li>
-            <li><a href="#">魚缸水流導向</a></li>
-            <li><a href="#">博特沉馬接管詳解圖</a></li>
-            <li><a href="#">博特各檔流量表</a></li>
-            <li><a href="#">魚呼吸沉馬分解圖</a></li>
-            <li><a href="#">上部過濾落水管尺寸</a></li>
-            <li><a href="#">三胞胎安裝</a></li>
-            <li><a href="#">三胞胎注意事項</a></li>
-            <li><a href="#">魚缸背景貼紙DIY</a></li>
-            <li><a href="#">蘋果手機魚缸拍照技巧</a></li>
-            <li><a href="#">酷魚流量表</a></li>
-            <li><a href="#">萌蟲燈</a></li>
-            <li><a href="#">吉印燈具</a></li>
-            <li><a href="#">龍門架</a></li>
-            <li><a href="#">魚缸廠商</a></li>
+          <span>💰 魚缸設備</span>
+          <ul>
+            <li>設備群</li>
+            <li>金魚燈具選擇</li>
+            <li>養魚實用好物</li>
+            <li>打氣機安裝方式</li>
+            <li>魚缸水體換算</li>
+            <li>測溫器接三胞胎方式</li>
+            <li>浴室水龍頭接溫度計範例</li>
+            <li>魚缸對應沉馬</li>
+            <li>魚缸水流導向</li>
+            <li>博特沉馬接管詳解圖</li>
+            <li>博特各檔流量表</li>
+            <li>魚呼吸沉馬分解圖</li>
+            <li>上部過濾落水管尺寸</li>
+            <li>三胞胎安裝</li>
+            <li>三胞胎注意事項</li>
+            <li>魚缸背景貼紙DIY</li>
+            <li>蘋果手機魚缸拍照技巧</li>
+            <li>酷魚流量表</li>
+            <li>萌蟲燈</li>
+            <li>吉印燈具</li>
+            <li>龍門架</li>
+            <li>魚缸廠商</li>
           </ul>
         </li>
 
         <li>
-          <a href="#">‼️ 金魚有狀況</a>
-          <ul class="dropdown">
-            <li><a href="#">魚醫生</a></li>
-            <li><a href="#">白點</a></li>
-            <li><a href="#">腸炎症狀和預防</a></li>
-            <li><a href="#">如何判斷魚病了</a></li>
+          <span>‼️ 金魚有狀況</span>
+          <ul>
+            <li>魚醫生</li>
+            <li>白點</li>
+            <li>腸炎症狀和預防</li>
+            <li>如何判斷魚病了</li>
           </ul>
         </li>
       </ul>
     </nav>
-  </header>
+  </aside>
 
-  <main>
-    <section class="card">
+  <!-- 主要內容 -->
+  <main class="content">
+    <div class="card">
       <h2>歡迎來到金魚養殖經驗交流分享</h2>
-      <p>這裡收錄金魚飼養的完整知識庫，從入門、日常操作、買魚檢疫，到飼料、設備、健康照護一應俱全。</p>
-    </section>
+      <p>魚飼養的完整知識庫，從入門、日常操作、買魚檢疫，到飼料、設備、健康照護一應俱全。</p>
+    </div>
   </main>
 
   <footer>
-    <p>© 2025 金魚養殖經驗交流分享｜製作：Michael Lee</p>
+    <p>© 2025 金魚養殖經驗交流分享 ｜ 製作：Michael Lee</p>
   </footer>
 
   <script>
     const menu = document.getElementById('mobile-menu');
-    const navList = document.querySelector('.nav-list');
+    const sidebar = document.getElementById('sidebar');
     menu.addEventListener('click', () => {
-      navList.classList.toggle('active');
+      sidebar.classList.toggle('active');
     });
   </script>
 </body>
