Update logo text and footer credits

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- 側邊導覽欄 -->
   <aside class="sidebar" id="sidebar">
-    <div class="logo">🐠 金魚學苑</div>
+    <div class="logo">🐠 金魚養殖經驗交流分享</div>
     <div class="menu-toggle" id="mobile-menu">☰</div>
 
     <nav>
@@ -179,7 +179,7 @@
   </main>
 
   <footer>
-    <p>© 2025 金魚養殖經驗交流分享 ｜ 製作：Michael Lee</p>
+    <p>© 2025 金魚養殖經驗交流分享 ｜ 製作：MLE</p>
   </footer>
 
   <script>
