--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li>夏季注意事項</li>
             <li>普力桶尺寸</li>
             <li>下鹽</li>
-            <li><a href="https://michael19980508.github.io/MLE/" target="_blank"下鹽計算機</li>
+            <li><a href="https://michael19980508.github.io/MLE/" target="_blank">下鹽計算機</a></li>
             <li><a href="https://michael19980508.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
             <li>出國出遠門應變措施</li>
             <li>出國回國魚缸經驗分享</li>
