--- a/content/daily-isolated-waterchange.html
+++ b/content/daily-isolated-waterchange.html
@@ -11,9 +11,9 @@
   有助於促進魚隻代謝、配合換水以去除代謝物與腸膜，維持良好水質。</p>
 
   <div style="text-align:center; margin: 25px 0;">
-    <img src="https://https://github.com/michael19980508/index/blob/main/image/isolated-waterchange.png" 
-         alt="隔離換水的用意" 
-         style="max-width: 100%; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+    <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/isolated-waterchange.png"
+     alt="隔離換水的用意"
+     style="max-width:100%; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.2);">
   </div>
 
   <p style="text-align:center; font-size:1.1em; color:#e8953c;">💧勤換水，預防勝於治療💧</p>
