Update HTML structure and image attributes

--- a/content/daily-isolated-waterchange.html
+++ b/content/daily-isolated-waterchange.html
@@ -10,11 +10,14 @@
   <p>溫度建議以<strong>每天 1–2 度幅度升溫</strong>，提高到 27–28°C，  
   有助於促進魚隻代謝、配合換水以去除代謝物與腸膜，維持良好水質。</p>
 
-  <div style="text-align:center; margin: 25px 0;">
+  <div style="display:flex; justify-content:center; margin:25px 0;">
     <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/isolated-waterchange.png"
-     alt="隔離換水的用意"
-     style="max-width:100%; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+         alt="隔離換水的用意"
+         loading="lazy"
+         style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 12px rgba(0,0,0,0.25);">
   </div>
 
-  <p style="text-align:center; font-size:1.1em; color:#e8953c;">💧勤換水，預防勝於治療💧</p>
+  <p style="text-align:center; font-size:1.1em; color:#e8953c;">
+    💧勤換水，預防勝於治療💧
+  </p>
 </div>
