--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="#" onclick="loadPage('content/daily-waterchange.html')">換水</a></li>
             <li><a href="#" onclick="loadPage('content/daily-isolated-waterchange.html')">隔離換水的用意</a></li>
             <li><a href="#" onclick="loadPage('content/daily-cloudy-water.html')">正常換水為什麼水還是霧</a></li>
-            <li>清缸建議方式</li>
+            <li><a href="#" onclick="loadPage('content/daily-tank-clean.html')">清缸建議方式</a></li>
             <li>移缸建議分享</li>
             <li>夏季魚缸應對高溫注意事項</li>
             <li>夏季高溫換水應變方式</li>
