--- a/content/daily-tank-clean.html
+++ b/content/daily-tank-clean.html
@@ -3,7 +3,7 @@
 
   <!-- 圖片 -->
   <div style="display:flex; justify-content:center; margin:25px 0;">
-    <img src="https://github.com/michael19980508/index/blob/main/image/%E6%B8%85%E7%BC%B8%E5%BB%BA%E8%AD%B0%E6%96%B9%E5%BC%8F.png"
+    <img src="https://github.com/michael19980508/index/blob/main/image/清缸建議方式.png"
          alt="清缸建議方式"
          loading="lazy"
          style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
