--- a/content/daily-hotwater-change.html
+++ b/content/daily-hotwater-change.html
@@ -1,48 +1,57 @@
 <div class="card">
-  <h2>💦 夏季高溫換水應變方式</h2>
+  <h2 style="text-align:center; color:#f59e0b;">💦 夏季高溫換水應變方式</h2>
 
-  <p>在夏季高溫時，換水需要格外注意水溫差與儲水時間，以避免魚隻緊迫。</p>
-
-  <h3>🔆 普力桶：</h3>
-  <p>
-    選擇合適容量的普力桶，儲好所需水量後，放置於通風處並以風扇輔助降溫。<br>
-    當水溫降至與魚缸水溫<strong>正負 3°C 內</strong>再換水即可。<br>
-    <strong>⚠️ 注意：</strong>儲水時間勿超過一日，應於當日入缸使用。
+  <p style="text-align:center; font-size:1.05em; margin-bottom:15px;">
+    在夏季高溫時，換水需要格外注意水溫與環境條件，以避免魚隻緊迫。
   </p>
 
-  <h3>🔆 水龍頭溫度計：</h3>
-  <p>
-    可即時檢測自來水出水溫度，確認是否在安全換水溫差範圍內。<br>
-    可於蝦皮搜尋關鍵字 <strong>「水龍頭溫度計」</strong> 購買。
-  </p>
+  <!-- 區塊一：普力桶 -->
+  <div style="background:#fffaf0; border-left:5px solid #f59e0b; border-radius:8px; padding:15px 18px; margin-bottom:20px; box-shadow:0 2px 6px rgba(0,0,0,0.05);">
+    <h3 style="margin-top:0; color:#d97706;">🔆 普力桶</h3>
+    <p style="line-height:1.8;">
+      選擇合適容量的普力桶，儲好所需水量後，放置於通風處並開啟風扇輔助降溫。<br>
+      當水溫降至與魚缸水溫 <strong>正負 3°C 內</strong> 再換水即可。<br>
+      ⚠️ <strong>注意：</strong>儲水時間勿超過一日，應於當日入缸使用。
+    </p>
+  </div>
 
-  <hr style="margin:25px 0; border:0; border-top:2px dashed #ccc;">
+  <!-- 區塊二：水龍頭溫度計 -->
+  <div style="background:#f0f9ff; border-left:5px solid #3b82f6; border-radius:8px; padding:15px 18px; margin-bottom:20px; box-shadow:0 2px 6px rgba(0,0,0,0.05);">
+    <h3 style="margin-top:0; color:#2563eb;">🔆 水龍頭溫度計</h3>
+    <p style="line-height:1.8;">
+      可即時檢測自來水出水溫度，確認是否在安全換水溫差範圍內。<br>
+      可於蝦皮搜尋關鍵字 <strong>「水龍頭溫度計」</strong> 購買。
+    </p>
+  </div>
 
-  <h3>☀️ 普力桶尺寸參考：</h3>
-  <table style="width:100%; border-collapse:collapse; margin-top:10px; font-size:0.95em;">
-    <thead style="background:#f9f9f9; font-weight:bold;">
-      <tr>
-        <th style="border:1px solid #ddd; padding:6px;">容量</th>
-        <th style="border:1px solid #ddd; padding:6px;">尺寸（長 × 寬 × 高, cm）</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td style="border:1px solid #ddd; padding:6px;">240L</td><td style="border:1px solid #ddd; padding:6px;">86.5 × 64.5 × 68</td></tr>
-      <tr><td>200L</td><td>81 × 59.5 × 60</td></tr>
-      <tr><td>160L</td><td>76.5 × 55 × 48.5</td></tr>
-      <tr><td>140L</td><td>76 × 55 × 44</td></tr>
-      <tr><td>120L</td><td>75 × 54 × 40</td></tr>
-      <tr><td>90L</td><td>70.5 × 48 × 38</td></tr>
-      <tr><td>70L</td><td>67 × 48 × 32</td></tr>
-      <tr><td>60L</td><td>61 × 42 × 36</td></tr>
-      <tr><td>50L</td><td>56 × 41 × 31</td></tr>
-      <tr><td>40L</td><td>54.5 × 38.5 × 28</td></tr>
-      <tr><td>30L</td><td>49 × 36.5 × 25</td></tr>
-      <tr><td>24L</td><td>46 × 34 × 23.5</td></tr>
-    </tbody>
-  </table>
+  <!-- 區塊三：表格 -->
+  <h3 style="text-align:center; margin-top:25px; color:#16a34a;">☀️ 普力桶尺寸參考</h3>
+  <div style="overflow-x:auto; margin-top:10px;">
+    <table style="width:100%; border-collapse:collapse; border-radius:12px; overflow:hidden; font-size:0.95em; box-shadow:0 2px 8px rgba(0,0,0,0.05);">
+      <thead style="background:#fde68a; color:#4b5563;">
+        <tr>
+          <th style="padding:10px; border-bottom:2px solid #fcd34d;">容量</th>
+          <th style="padding:10px; border-bottom:2px solid #fcd34d;">尺寸（長 × 寬 × 高, cm）</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td style="padding:8px; border-bottom:1px solid #eee;">240L</td><td style="padding:8px;">86.5 × 64.5 × 68</td></tr>
+        <tr><td>200L</td><td>81 × 59.5 × 60</td></tr>
+        <tr><td>160L</td><td>76.5 × 55 × 48.5</td></tr>
+        <tr><td>140L</td><td>76 × 55 × 44</td></tr>
+        <tr><td>120L</td><td>75 × 54 × 40</td></tr>
+        <tr><td>90L</td><td>70.5 × 48 × 38</td></tr>
+        <tr><td>70L</td><td>67 × 48 × 32</td></tr>
+        <tr><td>60L</td><td>61 × 42 × 36</td></tr>
+        <tr><td>50L</td><td>56 × 41 × 31</td></tr>
+        <tr><td>40L</td><td>54.5 × 38.5 × 28</td></tr>
+        <tr><td>30L</td><td>49 × 36.5 × 25</td></tr>
+        <tr><td>24L</td><td>46 × 34 × 23.5</td></tr>
+      </tbody>
+    </table>
+  </div>
 
-  <p style="text-align:center; margin-top:20px; font-weight:bold; color:#0077b6;">
+  <p style="text-align:center; margin-top:25px; font-weight:bold; color:#0284c7;">
     💧 沒事多換水，多換水沒事 💧
   </p>
 </div>
