--- a/content/daily-hotwater-change.html
+++ b/content/daily-hotwater-change.html
@@ -5,7 +5,7 @@
     在夏季高溫時，換水需要格外注意水溫與環境條件，以避免魚隻緊迫。
   </p>
 
-  <!-- 區塊一：普力桶 -->
+  <!-- 🔆 普力桶 -->
   <div style="background:#fffaf0; border-left:5px solid #f59e0b; border-radius:8px; padding:15px 18px; margin-bottom:20px; box-shadow:0 2px 6px rgba(0,0,0,0.05);">
     <h3 style="margin-top:0; color:#d97706;">🔆 普力桶</h3>
     <p style="line-height:1.8;">
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <!-- 區塊二：水龍頭溫度計 -->
+  <!-- 🔆 水龍頭溫度計 -->
   <div style="background:#f0f9ff; border-left:5px solid #3b82f6; border-radius:8px; padding:15px 18px; margin-bottom:20px; box-shadow:0 2px 6px rgba(0,0,0,0.05);">
     <h3 style="margin-top:0; color:#2563eb;">🔆 水龍頭溫度計</h3>
     <p style="line-height:1.8;">
@@ -24,29 +24,38 @@
     </p>
   </div>
 
-  <!-- 區塊三：表格 -->
+  <!-- ☀️ 表格區塊 -->
   <h3 style="text-align:center; margin-top:25px; color:#16a34a;">☀️ 普力桶尺寸參考</h3>
   <div style="overflow-x:auto; margin-top:10px;">
-    <table style="width:100%; border-collapse:collapse; border-radius:12px; overflow:hidden; font-size:0.95em; box-shadow:0 2px 8px rgba(0,0,0,0.05);">
-      <thead style="background:#fde68a; color:#4b5563;">
+    <table style="
+      width:100%;
+      border-collapse:separate;
+      border-spacing:0;
+      font-size:0.95em;
+      text-align:center;
+      border-radius:10px;
+      overflow:hidden;
+      box-shadow:0 2px 8px rgba(0,0,0,0.08);
+    ">
+      <thead style="background:#fef3c7; color:#4b5563;">
         <tr>
-          <th style="padding:10px; border-bottom:2px solid #fcd34d;">容量</th>
-          <th style="padding:10px; border-bottom:2px solid #fcd34d;">尺寸（長 × 寬 × 高, cm）</th>
+          <th style="padding:10px; border:1px solid #fcd34d;">容量</th>
+          <th style="padding:10px; border:1px solid #fcd34d;">尺寸（長 × 寬 × 高, cm）</th>
         </tr>
       </thead>
       <tbody>
-        <tr><td style="padding:8px; border-bottom:1px solid #eee;">240L</td><td style="padding:8px;">86.5 × 64.5 × 68</td></tr>
-        <tr><td>200L</td><td>81 × 59.5 × 60</td></tr>
-        <tr><td>160L</td><td>76.5 × 55 × 48.5</td></tr>
-        <tr><td>140L</td><td>76 × 55 × 44</td></tr>
-        <tr><td>120L</td><td>75 × 54 × 40</td></tr>
-        <tr><td>90L</td><td>70.5 × 48 × 38</td></tr>
-        <tr><td>70L</td><td>67 × 48 × 32</td></tr>
-        <tr><td>60L</td><td>61 × 42 × 36</td></tr>
-        <tr><td>50L</td><td>56 × 41 × 31</td></tr>
-        <tr><td>40L</td><td>54.5 × 38.5 × 28</td></tr>
-        <tr><td>30L</td><td>49 × 36.5 × 25</td></tr>
-        <tr><td>24L</td><td>46 × 34 × 23.5</td></tr>
+        <tr><td style="padding:8px; border:1px solid #f0f0f0;">240L</td><td style="padding:8px; border:1px solid #f0f0f0;">86.5 × 64.5 × 68</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">200L</td><td style="border:1px solid #f0f0f0;">81 × 59.5 × 60</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">160L</td><td style="border:1px solid #f0f0f0;">76.5 × 55 × 48.5</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">140L</td><td style="border:1px solid #f0f0f0;">76 × 55 × 44</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">120L</td><td style="border:1px solid #f0f0f0;">75 × 54 × 40</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">90L</td><td style="border:1px solid #f0f0f0;">70.5 × 48 × 38</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">70L</td><td style="border:1px solid #f0f0f0;">67 × 48 × 32</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">60L</td><td style="border:1px solid #f0f0f0;">61 × 42 × 36</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">50L</td><td style="border:1px solid #f0f0f0;">56 × 41 × 31</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">40L</td><td style="border:1px solid #f0f0f0;">54.5 × 38.5 × 28</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">30L</td><td style="border:1px solid #f0f0f0;">49 × 36.5 × 25</td></tr>
+        <tr><td style="border:1px solid #f0f0f0;">24L</td><td style="border:1px solid #f0f0f0;">46 × 34 × 23.5</td></tr>
       </tbody>
     </table>
   </div>
