--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
             <li><a href="#" onclick="loadPage('content/daily-tank-clean.html')">清缸建議方式</a></li>
             <li><a href="#" onclick="loadPage('content/daily-tank-move.html')">移缸經驗分享</a></li>
             <li><a href="#" onclick="loadPage('content/daily-summer-heat.html')">夏季魚缸應對高溫注意事項</a></li>
-            <li><a href="#" onclick="loadPage('content/daily-hotwater-change.html')">夏季高溫換水應變方式</a></li>
+            <li><a href="#" onclick="loadPage('content/daily-hotwater-change.html')">普力桶尺寸與夏季高溫換水應變方式</a></li>
             <li>夏季注意事項</li>
-            <li>普力桶尺寸</li>
             <li>下鹽</li>
             <li><a href="https://michael19980508.github.io/MLE/" target="_blank">下鹽計算機</a></li>
             <li><a href="https://michael19980508.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
