--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <li>出國回國魚缸經驗分享</li>
             <li>出國前操作-影片</li>
             <li>回國後操作-影片</li>
-            <li>颱風天的養魚對應措施</li>
+            <!-- 補影片 -->
+            <li>颱風天的養魚對應措施</li> 
             <li><a href="#" onclick="loadPage('content/special-typhoon-fasting.html')">颱風天為何禁食</a></li>
             <li>家庭溢流案例分享</li>
           </ul>
