Update link for new fish tank knowledge

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li>
           <span>🐟 買魚注意</span>
           <ul>
-            <li>新魚入缸知識</li>
+            <li><a href="#" onclick="loadPage('buyfish/new-fish-tank-intro.html')">新魚入缸知識</a></li>
             <li>檢疫新魚重點</li>
             <li>檢疫篇</li>
             <li>檢疫的重要性</li>
