Update quarantine tools link in index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li><a href="#" onclick="loadPage('buyfish/quarantine-tips.html')">檢疫新魚重點</a></li>
             <li>檢疫篇</li>
             <li>檢疫的重要性</li>
-            <li>金魚檢疫必備品</li>
+            <li><a href="#" onclick="loadPage('buyfish/quarantine-tool.html')">金魚檢疫必備品</a></li>
             <li>養魚從買魚開始1 基本判斷</li>
             <li>養魚從買魚開始2 檢疫原理</li>
             <li>養魚從買魚開始3 我不是韭菜大作戰</li>
