--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li>養魚從買魚開始2 檢疫原理</li>
             <li>養魚從買魚開始3 我不是韭菜大作戰</li>
             <li>魚趴案例</li>
-            <li>如何翻鰓</li>
+            <li><a href="#" onclick="loadPage('buyfish/how-to-turn-gills.html')">如何翻鰓</a></li>
             <li>無濾材檢疫全紀錄1</li>
             <li>無濾材檢疫全紀錄2</li>
             <li>檢疫紀錄</li>
