Add link for 若元錠使用方式 in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <ul>
             <li><a href="#" onclick="loadPage('feed/feed-storage.html')">飼料選擇及保存</a></li>
             <li><a href="#" onclick="loadPage('feed/feed-season.html')">季節與餵食 / 飼料類型</a></li>
-            <li>若元錠使用方式</li>
+            <li><a href="#" onclick="loadPage('feed/wakogan-usage.html')">若元錠使用方式</a></li>
             <li>飼料推薦</li>
             <li>高夠力金魚飼料</li>
             <li>鮮蝦食譜</li>
