--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li>德比克飼料</li>
             <li>阿岳金魚飼料</li>
             <li>赤蟲解凍餵食</li>
-            <li>赤蟲哪裡買</li>
+            <li><a href="#" onclick="loadPage('feed/redworm-buy.html')">赤蟲哪裡買</a></li>
           </ul>
         </li>
 
