Refactor sidebar navigation and remove mobile button
Removed mobile menu button and updated sidebar navigation.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 
-  <!-- 📱 手機選單按鈕 -->
-  <button class="menu-toggle" id="menuToggle">☰ 選單</button>
-
-  <!-- 🐠 側邊導覽欄 -->
+  <!-- 側邊導覽欄 -->
   <aside class="sidebar" id="sidebar">
     <div class="logo">🐠 金魚養殖經驗交流分享</div>
+    <div class="menu-toggle" id="mobile-menu">☰</div>
 
     <nav>
       <ul>
@@ -44,4 +42,168 @@
             <li><a href="#" onclick="loadPage('content/daily-waterchange.html')">換水</a></li>
             <li><a href="#" onclick="loadPage('content/daily-isolated-waterchange.html')">隔離換水的用意</a></li>
             <li><a href="#" onclick="loadPage('content/daily-cloudy-water.html')">正常換水為什麼水還是霧</a></li>
-            <li><a
+            <li><a href="#" onclick="loadPage('content/daily-tank-clean.html')">清缸建議方式</a></li>
+            <li><a href="#" onclick="loadPage('content/daily-tank-move.html')">移缸經驗分享</a></li>
+            <li><a href="#" onclick="loadPage('content/daily-summer-heat.html')">夏季魚缸應對高溫注意事項</a></li>
+            <li><a href="#" onclick="loadPage('content/daily-hotwater-change.html')">普力桶尺寸與夏季高溫換水應變方式</a></li>
+            <li>夏季注意事項</li>
+            <li><a href="#" onclick="loadPage('content/daily-salt-guide.html')">下鹽</a></li>
+            <li><a href="https://michael19980508.github.io/MLE/" target="_blank">下鹽計算機</a></li>
+            <li><a href="https://michael19980508.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
+            <li><a href="#" onclick="loadPage('content/daily-travel-response.html')">出國出遠門應變措施</a></li>
+            <li>出國回國魚缸經驗分享</li>
+            <li>出國前操作-影片</li>
+            <li>回國後操作-影片</li>
+            <!-- 補影片 -->
+            <li>颱風天的養魚對應措施</li> 
+            <li><a href="#" onclick="loadPage('content/special-typhoon-fasting.html')">颱風天為何禁食</a></li>
+            <li>家庭溢流案例分享</li>
+          </ul>
+        </li>
+
+        <li>
+          <span>🐟 買魚注意</span>
+          <ul>
+            <li><a href="#" onclick="loadPage('buyfish/new-fish-tank-intro.html')">新魚入缸知識</a></li>
+            <li><a href="#" onclick="loadPage('buyfish/quarantine-tips.html')">檢疫新魚重點</a></li>
+            <li>檢疫篇</li>
+            <li>檢疫的重要性</li>
+            <li><a href="#" onclick="loadPage('buyfish/quarantine-tool.html')">金魚檢疫必備品</a></li>
+            <li>養魚從買魚開始1 基本判斷</li>
+            <li>養魚從買魚開始2 檢疫原理</li>
+            <li>養魚從買魚開始3 我不是韭菜大作戰</li>
+            <li>魚趴案例</li>
+            <li><a href="#" onclick="loadPage('buyfish/how-to-turn-gills.html')">如何翻鰓</a></li>
+            <li>無濾材檢疫全紀錄1</li>
+            <li>無濾材檢疫全紀錄2</li>
+            <li>檢疫紀錄</li>
+          </ul>
+        </li>
+
+        <li>
+          <span>🚩 飼料</span>
+          <ul>
+            <li><a href="#" onclick="loadPage('feed/feed-storage.html')">飼料選擇及保存</a></li>
+            <li><a href="#" onclick="loadPage('feed/feed-season.html')">季節與餵食 / 飼料類型</a></li>
+            <li><a href="#" onclick="loadPage('feed/wakogan-usage.html')">若元錠使用方式</a></li>
+            <li><a href="#" onclick="loadPage('feed/feed-recommend.html')">飼料推薦</a></li>
+            <li>高夠力金魚飼料</li>
+            <li>鮮蝦食譜</li>
+            <li>德比克飼料</li>
+            <li>阿岳金魚飼料</li>
+            <li>赤蟲解凍餵食</li>
+            <li><a href="#" onclick="loadPage('feed/redworm-buy.html')">赤蟲哪裡買</a></li>
+          </ul>
+        </li>
+
+        <li>
+          <span>💎 金魚小知識</span>
+          <ul>
+            <li>金魚成長要素</li>
+            <li>光照</li>
+            <li>藻類的危害</li>
+            <li>泰獅圖鑑</li>
+            <li>蘭壽圖鑑</li>
+            <li>金魚族譜</li>
+            <li>繁殖日記</li>
+          </ul>
+        </li>
+
+        <li>
+          <span>📚 過濾配置</span>
+          <ul>
+            <li>硝化菌</li>
+            <li>陶瓷環對比圖</li>
+            <li>濾材量的知識點</li>
+            <li>濾材吸水量測試</li>
+            <li>過濾和濾材水流原理</li>
+            <li>滴流盒配置</li>
+            <li>二尺缸配置</li>
+            <li>三尺上部</li>
+            <li>三尺底濾</li>
+            <li>四尺上部</li>
+            <li>四尺底濾</li>
+            <li>五尺缸配置</li>
+            <li>七尺缸配置實例</li>
+            <li>雅柏</li>
+          </ul>
+        </li>
+
+        <li>
+          <span>💰 魚缸設備</span>
+          <ul>
+            <li>設備群</li>
+            <li>金魚燈具選擇</li>
+            <li>養魚實用好物</li>
+            <li>打氣機安裝方式</li>
+            <li>魚缸水體換算</li>
+            <li>測溫器接三胞胎方式</li>
+            <li>浴室水龍頭接溫度計範例</li>
+            <li>魚缸對應沉馬</li>
+            <li>魚缸水流導向</li>
+            <li>博特沉馬接管詳解圖</li>
+            <li>博特各檔流量表</li>
+            <li>魚呼吸沉馬分解圖</li>
+            <li>上部過濾落水管尺寸</li>
+            <li>三胞胎安裝</li>
+            <li>三胞胎注意事項</li>
+            <li>魚缸背景貼紙DIY</li>
+            <li>蘋果手機魚缸拍照技巧</li>
+            <li>酷魚流量表</li>
+            <li>萌蟲燈</li>
+            <li>吉印燈具</li>
+            <li>龍門架</li>
+            <li>魚缸廠商</li>
+          </ul>
+        </li>
+
+        <li>
+          <span>‼️ 金魚有狀況</span>
+          <ul>
+            <li>魚醫生</li>
+            <li>白點</li>
+            <li>腸炎症狀和預防</li>
+            <li>如何判斷魚病了</li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </aside>
+
+  <script>
+  function loadPage(page) {
+    fetch(page)
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('mainContent').innerHTML = html;
+      })
+      .catch(err => {
+        document.getElementById('mainContent').innerHTML = "<p>載入失敗 😢</p>";
+      });
+  }
+</script>
+
+
+  <!-- 主要內容 -->
+  <main class="content" id="mainContent">
+    <div class="card">
+      <h2>歡迎來到金魚養殖經驗交流分享</h2>
+      <p>魚飼養的完整知識庫，從入門、日常操作、買魚檢疫，到飼料、設備、健康照護一應俱全。</p>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 金魚養殖經驗交流分享 ｜ 製作：MLE</p>
+  </footer>
+
+  <script>
+    const menu = document.getElementById('mobile-menu');
+    const sidebar = document.getElementById('sidebar');
+    menu.addEventListener('click', () => {
+      sidebar.classList.toggle('active');
+    });
+  </script>
+</body>
+</html>
+
+index幫我改好 感恩你
