Update goldfish growth factors link in index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <li>
           <span>💎 金魚小知識</span>
           <ul>
-            <li>金魚成長要素</li>
+            <li><a href="#" onclick="loadPage('knowledge/goldfish-growth-factors.html')">金魚成長要素</a></li>
             <li>光照</li>
             <li>藻類的危害</li>
             <li>泰獅圖鑑</li>
