--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <span>💎 金魚小知識</span>
           <ul>
             <li><a href="#" onclick="loadPage('knowledge/goldfish-growth-factors.html')">金魚成長要素</a></li>
-            <li>光照</li>
+            <li><a href="#" onclick="loadPage('knowledge/light-guide.html')">光照</a></li>
             <li>藻類的危害</li>
             <li>泰獅圖鑑</li>
             <li>蘭壽圖鑑</li>
