Fix image paths in ranchu-gallery.html

--- a/knowledge/ranchu-gallery.html
+++ b/knowledge/ranchu-gallery.html
@@ -6,28 +6,28 @@
   <h3 style="color:#e8953c; margin-top:25px;">📘 蘭壽介紹圖鑑</h3>
   <p style="color:#777;">來源：KDW工作室（中國）</p>
   <div class="gallery">
-    <img src="images/ranchu/1.jpg" alt="蘭壽圖鑑1">
-    <img src="images/ranchu/2.jpg" alt="蘭壽圖鑑2">
-    <img src="images/ranchu/3.jpg" alt="蘭壽圖鑑3">
-    <img src="images/ranchu/4.jpg" alt="蘭壽圖鑑4">
-    <img src="images/ranchu/5.jpg" alt="蘭壽圖鑑5">
-    <img src="images/ranchu/6.jpg" alt="蘭壽圖鑑6">
-    <img src="images/ranchu/7.jpg" alt="蘭壽圖鑑7">
-    <img src="images/ranchu/8.jpg" alt="蘭壽圖鑑8">
-    <img src="images/ranchu/9.jpg" alt="蘭壽圖鑑9">
-    <img src="images/ranchu/10.jpg" alt="蘭壽圖鑑10">
-    <img src="images/ranchu/11.jpg" alt="蘭壽圖鑑11">
-    <img src="images/ranchu/12.jpg" alt="蘭壽圖鑑12">
-    <img src="images/ranchu/13.jpg" alt="蘭壽圖鑑13">
-    <img src="images/ranchu/14.jpg" alt="蘭壽圖鑑14">
-    <img src="images/ranchu/15.jpg" alt="蘭壽圖鑑15">
-    <img src="images/ranchu/16.jpg" alt="蘭壽圖鑑16">
+    <img src="image/ranchu/1.jpg" alt="蘭壽圖鑑1">
+    <img src="image/ranchu/2.jpg" alt="蘭壽圖鑑2">
+    <img src="image/ranchu/3.jpg" alt="蘭壽圖鑑3">
+    <img src="image/ranchu/4.jpg" alt="蘭壽圖鑑4">
+    <img src="image/ranchu/5.jpg" alt="蘭壽圖鑑5">
+    <img src="image/ranchu/6.jpg" alt="蘭壽圖鑑6">
+    <img src="image/ranchu/7.jpg" alt="蘭壽圖鑑7">
+    <img src="image/ranchu/8.jpg" alt="蘭壽圖鑑8">
+    <img src="image/ranchu/9.jpg" alt="蘭壽圖鑑9">
+    <img src="image/ranchu/10.jpg" alt="蘭壽圖鑑10">
+    <img src="image/ranchu/11.jpg" alt="蘭壽圖鑑11">
+    <img src="image/ranchu/12.jpg" alt="蘭壽圖鑑12">
+    <img src="image/ranchu/13.jpg" alt="蘭壽圖鑑13">
+    <img src="image/ranchu/14.jpg" alt="蘭壽圖鑑14">
+    <img src="image/ranchu/15.jpg" alt="蘭壽圖鑑15">
+    <img src="image/ranchu/16.jpg" alt="蘭壽圖鑑16">
   </div>
 
   <!-- 卡通版 -->
   <h3 style="color:#e8953c; margin-top:25px;">🎨 2024年卡通版蘭壽圖鑑</h3>
   <div class="gallery">
-    <img src="images/ranchu/cartoon-2024.jpg" alt="卡通版蘭壽圖鑑">
+    <img src="image/ranchu/cartoon-2024.jpg" alt="卡通版蘭壽圖鑑">
   </div>
 
   <p style="margin-top:30px; font-weight:bold; color:#3b6e68;">
