--- a/knowledge/ranchu-gallery.html
+++ b/knowledge/ranchu-gallery.html
@@ -35,22 +35,66 @@
   </p>
 </div>
 
+<!-- 🔍 點擊圖片放大預覽 -->
+<div id="lightbox" class="lightbox">
+  <img id="lightbox-img" src="" alt="">
+</div>
+
 <style>
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 15px;
   justify-items: center;
   margin: 15px 0 30px 0;
 }
 .gallery img {
   width: 100%;
-  max-width: 160px;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-  transition: transform 0.2s;
+  max-width: 240px;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+  transition: transform 0.25s;
+  cursor: pointer;
 }
 .gallery img:hover {
-  transform: scale(1.05);
+  transform: scale(1.06);
+}
+
+/* 🔍 放大圖樣式 */
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 10000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.85);
+  justify-content: center;
+  align-items: center;
+}
+.lightbox img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(255,255,255,0.3);
+  cursor: zoom-out;
 }
 </style>
+
+<script>
+// 點擊圖片放大
+document.querySelectorAll('.gallery img').forEach(img => {
+  img.addEventListener('click', function() {
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+    lightboxImg.src = this.src;
+    lightbox.style.display = 'flex';
+  });
+});
+
+// 點擊背景關閉
+document.getElementById('lightbox').addEventListener('click', function() {
+  this.style.display = 'none';
+});
+</script>
