--- a/knowledge/goldfish-lineage.html
+++ b/knowledge/goldfish-lineage.html
@@ -3,7 +3,7 @@
   <p>金魚源自野生鯽魚的突變，經歷長時間人工培育分化出各式品系。以下圖示展示了金魚從原始型到現代觀賞品種的演化分支與系統。</p>
 
   <h3 style="color:#e8953c; margin-top:25px;">📘 金魚分支圖</h3>
-  <div class="gallery">
+  <div class="gallery-horizontal">
     <img src="image/goldfish-lineage/1.jpg" alt="金魚族譜圖1">
     <img src="image/goldfish-lineage/2.jpg" alt="金魚族譜圖2">
     <img src="image/goldfish-lineage/3.jpg" alt="金魚族譜圖3">
@@ -16,22 +16,66 @@
   </p>
 </div>
 
+<!-- 🔍 點擊圖片放大預覽 -->
+<div id="lightbox" class="lightbox">
+  <img id="lightbox-img" src="" alt="">
+</div>
+
 <style>
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-  gap: 12px;
-  justify-items: center;
-  margin: 15px 0 30px 0;
+.gallery-horizontal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  margin: 25px 0 40px 0;
 }
-.gallery img {
+.gallery-horizontal img {
   width: 100%;
-  max-width: 260px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-  transition: transform 0.25s;
+  max-width: 900px;
+  border-radius: 15px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+  transition: transform 0.3s ease;
+  cursor: pointer;
 }
-.gallery img:hover {
-  transform: scale(1.05);
+.gallery-horizontal img:hover {
+  transform: scale(1.02);
+}
+
+/* 🔍 放大圖樣式 */
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 10000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.85);
+  justify-content: center;
+  align-items: center;
+}
+.lightbox img {
+  max-width: 95%;
+  max-height: 95%;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(255,255,255,0.3);
+  cursor: zoom-out;
 }
 </style>
+
+<script>
+// 點擊圖片放大
+document.querySelectorAll('.gallery-horizontal img').forEach(img => {
+  img.addEventListener('click', function() {
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+    lightboxImg.src = this.src;
+    lightbox.style.display = 'flex';
+  });
+});
+
+// 點擊背景關閉
+document.getElementById('lightbox').addEventListener('click', function() {
+  this.style.display = 'none';
+});
+</script>
