--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>金魚養殖經驗交流分享｜Goldfish Guide</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+
   <!-- 📱 手機版選單按鈕 -->
   <button class="menu-toggle" id="menuToggle">☰ 選單</button>
 
@@ -50,11 +50,17 @@
             <li><a href="#" onclick="loadPage('content/daily-tank-move.html')">移缸經驗分享</a></li>
             <li><a href="#" onclick="loadPage('content/daily-summer-heat.html')">夏季魚缸應對高溫注意事項</a></li>
             <li><a href="#" onclick="loadPage('content/daily-hotwater-change.html')">普力桶尺寸與夏季高溫換水應變方式</a></li>
+            <li>夏季注意事項</li>
             <li><a href="#" onclick="loadPage('content/daily-salt-guide.html')">下鹽</a></li>
             <li><a href="https://michael19980508.github.io/MLE/" target="_blank">下鹽計算機</a></li>
             <li><a href="https://michael19980508.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
             <li><a href="#" onclick="loadPage('content/daily-travel-response.html')">出國出遠門應變措施</a></li>
+            <li>出國回國魚缸經驗分享</li>
+            <li>出國前操作-影片</li>
+            <li>回國後操作-影片</li>
+            <li>颱風天的養魚對應措施</li> 
             <li><a href="#" onclick="loadPage('content/special-typhoon-fasting.html')">颱風天為何禁食</a></li>
+            <li>家庭溢流案例分享</li>
           </ul>
         </li>
 
@@ -64,13 +70,21 @@
           <ul>
             <li><a href="#" onclick="loadPage('buyfish/new-fish-tank-intro.html')">新魚入缸知識</a></li>
             <li><a href="#" onclick="loadPage('buyfish/quarantine-tips.html')">檢疫新魚重點</a></li>
+            <li>檢疫篇</li>
+            <li>檢疫的重要性</li>
             <li><a href="#" onclick="loadPage('buyfish/quarantine-tool.html')">金魚檢疫必備品</a></li>
+            <li>養魚從買魚開始1 基本判斷</li>
+            <li>養魚從買魚開始2 檢疫原理</li>
+            <li>養魚從買魚開始3 我不是韭菜大作戰</li>
+            <li>魚趴案例</li>
             <li><a href="#" onclick="loadPage('buyfish/how-to-turn-gills.html')">如何翻鰓</a></li>
-            <li><a href="#" onclick="loadPage('buyfish/redworm-buy.html')">赤蟲哪裡買</a></li>
+            <li>無濾材檢疫全紀錄1</li>
+            <li>無濾材檢疫全紀錄2</li>
+            <li>檢疫紀錄</li>
           </ul>
         </li>
 
-        <!-- 🪶 飼料 -->
+        <!-- 🚩 飼料 -->
         <li>
           <span>🚩 飼料</span>
           <ul>
@@ -78,10 +92,16 @@
             <li><a href="#" onclick="loadPage('feed/feed-season.html')">季節與餵食 / 飼料類型</a></li>
             <li><a href="#" onclick="loadPage('feed/wakogan-usage.html')">若元錠使用方式</a></li>
             <li><a href="#" onclick="loadPage('feed/feed-recommend.html')">飼料推薦</a></li>
+            <li>高夠力金魚飼料</li>
+            <li>鮮蝦食譜</li>
+            <li>德比克飼料</li>
+            <li>阿岳金魚飼料</li>
+            <li>赤蟲解凍餵食</li>
+            <li><a href="#" onclick="loadPage('feed/redworm-buy.html')">赤蟲哪裡買</a></li>
           </ul>
         </li>
 
-        <!-- 📘 金魚小知識 -->
+        <!-- 💎 金魚小知識 -->
         <li>
           <span>💎 金魚小知識</span>
           <ul>
@@ -91,39 +111,68 @@
             <li><a href="#" onclick="loadPage('knowledge/thai-lionhead.html')">泰獅圖鑑</a></li>
             <li><a href="#" onclick="loadPage('knowledge/ranchu-gallery.html')">蘭壽圖鑑</a></li>
             <li><a href="#" onclick="loadPage('knowledge/goldfish-lineage.html')">金魚族譜</a></li>
+            <li>繁殖日記</li>
           </ul>
         </li>
 
-        <!-- ⚙️ 過濾配置 -->
+        <!-- 📚 過濾配置 -->
         <li>
           <span>📚 過濾配置</span>
           <ul>
-            <li><a href="#" onclick="loadPage('filter/nitrifying-bacteria.html')">硝化菌</a></li>
-            <li><a href="#" onclick="loadPage('filter/ceramic-compare.html')">陶瓷環對比圖</a></li>
-            <li><a href="#" onclick="loadPage('filter/filter-flow.html')">過濾與水流原理</a></li>
-            <li><a href="#" onclick="loadPage('filter/drip-box.html')">滴流盒配置</a></li>
+            <li>硝化菌</li>
+            <li>陶瓷環對比圖</li>
+            <li>濾材量的知識點</li>
+            <li>濾材吸水量測試</li>
+            <li>過濾和濾材水流原理</li>
+            <li>滴流盒配置</li>
+            <li>二尺缸配置</li>
+            <li>三尺上部</li>
+            <li>三尺底濾</li>
+            <li>四尺上部</li>
+            <li>四尺底濾</li>
+            <li>五尺缸配置</li>
+            <li>七尺缸配置實例</li>
+            <li>雅柏</li>
           </ul>
         </li>
 
-        <!-- 💰 設備 -->
+        <!-- 💰 魚缸設備 -->
         <li>
           <span>💰 魚缸設備</span>
           <ul>
-            <li><a href="#" onclick="loadPage('equipment/devices.html')">設備群</a></li>
-            <li><a href="#" onclick="loadPage('equipment/lighting.html')">金魚燈具選擇</a></li>
-            <li><a href="#" onclick="loadPage('equipment/airpump-install.html')">打氣機安裝方式</a></li>
-            <li><a href="#" onclick="loadPage('equipment/volume-calculator.html')">魚缸水體換算</a></li>
-            <li><a href="#" onclick="loadPage('equipment/decor-diy.html')">魚缸背景貼紙DIY</a></li>
+            <li>設備群</li>
+            <li>金魚燈具選擇</li>
+            <li>養魚實用好物</li>
+            <li>打氣機安裝方式</li>
+            <li>魚缸水體換算</li>
+            <li>測溫器接三胞胎方式</li>
+            <li>浴室水龍頭接溫度計範例</li>
+            <li>魚缸對應沉馬</li>
+            <li>魚缸水流導向</li>
+            <li>博特沉馬接管詳解圖</li>
+            <li>博特各檔流量表</li>
+            <li>魚呼吸沉馬分解圖</li>
+            <li>上部過濾落水管尺寸</li>
+            <li>三胞胎安裝</li>
+            <li>三胞胎注意事項</li>
+            <li>魚缸背景貼紙DIY</li>
+            <li>蘋果手機魚缸拍照技巧</li>
+            <li>酷魚流量表</li>
+            <li>萌蟲燈</li>
+            <li>吉印燈具</li>
+            <li>龍門架</li>
+            <li>魚缸廠商</li>
           </ul>
         </li>
 
-        <!-- 🚨 異常狀況 -->
+        <!-- ⚠️ 魚病與健康 -->
         <li>
           <span>‼️ 金魚有狀況</span>
           <ul>
-            <li><a href="#" onclick="loadPage('disease/white-spot.html')">白點</a></li>
-            <li><a href="#" onclick="loadPage('disease/enteritis.html')">腸炎症狀和預防</a></li>
-            <li><a href="#" onclick="loadPage('disease/how-to-diagnose.html')">如何判斷魚病了</a></li>
+            <li>魚醫生</li>
+            <li>白點</li>
+            <li>腸炎症狀和預防</li>
+            <li>如何判斷魚病了</li>
           </ul>
         </li>
       </ul>
@@ -152,11 +201,31 @@
       sidebar.classList.toggle('active');
     });
 
-    // 載入子頁面
-    function loadPage(page) {
+    // 載入子頁面並高亮選單
+    function loadPage(page, el) {
       fetch(page)
         .then(response => response.text())
         .then(html => {
           document.getElementById('mainContent').innerHTML = html;
-          sidebar.classList.remove('active'); // 手機版自動收合
-          window.scro
+          sidebar.classList.remove('active');
+          window.scrollTo({ top: 0, behavior: 'smooth' });
+
+          // 移除舊的 active
+          document.querySelectorAll('.sidebar a.active').forEach(a => a.classList.remove('active'));
+          if (el) el.classList.add('active');
+        })
+        .catch(() => {
+          document.getElementById('mainContent').innerHTML = "<p>載入失敗 😢</p>";
+        });
+    }
+
+    // 自動綁定 click 高亮
+    document.querySelectorAll('.sidebar a').forEach(a => {
+      a.addEventListener('click', function() {
+        loadPage(this.getAttribute('onclick').match(/'([^']+)'/)[1], this);
+      });
+    });
+  </script>
+
+</body>
+</html>
