--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <li>
           <span>📚 過濾配置</span>
           <ul>
-            <li>硝化菌</li>
+            <li><a href="#" onclick="loadPage('filter/bacteria.html')">硝化菌篇</a></li>
             <li>陶瓷環對比圖</li>
             <li>濾材量的知識點</li>
             <li>濾材吸水量測試</li>
