Update filter links in index.html

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <li>
           <span>📚 過濾配置</span>
           <ul>
-            <li><a href="#" onclick="loadPage('filter/bacteria.html')">硝化菌篇</a></li>
-            <li><a href="#" onclick="loadPage('filter/tcdbt.html')">陶瓷環對比圖</a></li>
+            <li><a href="#" onclick="loadPage('filter/nitrifying.html')">硝化菌篇</a></li>
+            <li><a href="#" onclick="loadPage('filter/biofilter.html.html')">陶瓷環對比圖</a></li>
             <li>濾材量的知識點</li>
             <li>濾材吸水量測試</li>
             <li>過濾和濾材水流原理</li>
