--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           <span>📚 過濾配置</span>
           <ul>
             <li><a href="#" onclick="loadPage('filter/nitrifying.html')">硝化菌篇</a></li>
-            <li><a href="#" onclick="loadPage('filter/biofilter.html.html')">陶瓷環對比圖</a></li>
-            <li>濾材量的知識點</li>
+            <li><a href="#" onclick="loadPage('filter/biofilter.html')">陶瓷環對比圖</a></li>
+            <li><a href="#" onclick="loadPage('filter/filter-volume.html')">濾材量的知識點</a></li>
             <li>濾材吸水量測試</li>
             <li>過濾和濾材水流原理</li>
             <li>滴流盒配置</li>
