Simplify image captions in biofilter.html

--- a/filter/biofilter.html
+++ b/filter/biofilter.html
@@ -6,7 +6,7 @@
        alt="陶瓷環圖1"
        loading="lazy"
        style="width:95%; max-width:900px; border-radius:16px; box-shadow:0 6px 12px rgba(0,0,0,0.25);">
-  <p style="margin-top:10px; font-weight:bold; color:#16a34a;">✅ 圖1 — 高品質多孔陶瓷環</p>
+  <p style="margin-top:10px; font-weight:bold; color:#16a34a;">圖1</p>
 </div>
 
 <!-- 圖片 2 -->
@@ -15,5 +15,5 @@
        alt="陶瓷環圖2"
        loading="lazy"
        style="width:95%; max-width:900px; border-radius:16px; box-shadow:0 6px 12px rgba(0,0,0,0.25);">
-  <p style="margin-top:10px; font-weight:bold; color:#dc2626;">❌ 圖2 — 密實材質、難以培菌</p>
+  <p style="margin-top:10px; font-weight:bold; color:#dc2626;">圖2 </p>
 </div>
