--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <li><a href="#" onclick="loadPage('filter/filter-system-4ft.html')">四尺缸上部過濾配置</a></li>
             <li><a href="#" onclick="loadPage('filter/filter-system-4ft-bottom.html')">四尺底濾改乾濕分離配置</a></li>
             <li><a href="#" onclick="loadPage('filter/filter-system-5ft.html')">五尺缸配置實例</a></li>
-            <li>七尺缸配置實例</li>
+            <li><a href="#" onclick="loadPage('filter/filter-7ft.html')">七尺缸配置實例</a></li>
             <li>雅柏</li>
           </ul>
         </li>
