Add link to 高夠力金魚飼料 in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li><a href="#" onclick="loadPage('./feed/feed-season.html', this)">季節與餵食 / 飼料類型</a></li>
             <li><a href="#" onclick="loadPage('./feed/wakogan-usage.html', this)">若元錠使用方式</a></li>
             <li><a href="#" onclick="loadPage('./feed/feed-recommend.html', this)">飼料推薦</a></li>
-            <li>高夠力金魚飼料</li>
+            <li><a href="#" onclick="loadPage('./feed/hikari.html', this)">高夠力金魚飼料</a></li>
             <li>鮮蝦食譜</li>
             <li>德比克飼料</li>
             <li>阿岳金魚飼料</li>
