Refactor cleaning steps into individual paragraphs

--- a/content/daily-tank-clean.html
+++ b/content/daily-tank-clean.html
@@ -11,13 +11,11 @@
 
   <!-- 說明文字 -->
   <p><strong>清缸步驟：</strong></p>
-  <ol>
-    <li>水抽乾，缸清乾淨。</li>
-    <li>對缸泡漂白水或用酒精擦拭皆可。</li>
-    <li>晾乾 3–5 天為佳，避免曝曬太陽造成膠體裂化。</li>
-    <li>過濾盒、沉馬、管路、打氣石全清洗並晾乾至少 3–5 天。</li>
-    <li>前述作業完成後再進行重新開缸，棉與濾材需全數更換。</li>
-  </ol>
+  <p>水抽乾，缸清乾淨。</p>
+  <p>對缸泡漂白水或用酒精擦拭皆可。</p>
+  <p>晾乾 3–5 天為佳，避免曝曬太陽造成膠體裂化。</p>
+  <p>過濾盒、沉馬、管路、打氣石全清洗並晾乾至少 3–5 天。</p>
+  <p>前述作業完成後再進行重新開缸，棉與濾材需全數更換。</p>
 
   <p style="text-align:center; color:#e8953c; font-weight:bold;">💧 缸乾淨，魚安心 💧</p>
 </div>
