--- a/content/daily-salt-guide.html
+++ b/content/daily-salt-guide.html
@@ -39,9 +39,9 @@
 
   <h3 style="color:#2563eb;">📍 購買處：</h3>
   <ul style="line-height:1.8; margin-left:20px;">
-    <li>農會超市</li>
-    <li>水族館、蝦皮商家</li>
-    <li>食品原料行、食品雜貨店（也可購買粗鹽）</li>
+    <p>農會超市</p>
+    <p>水族館、蝦皮商家</p>
+    <p>食品原料行、食品雜貨店（也可購買粗鹽）</p>
   </ul>
 
   <p style="text-align:center; font-weight:bold; color:#e67e22; margin-top:20px;">
