Change list items to paragraph format in HTML

--- a/feed/feed-recommend.html
+++ b/feed/feed-recommend.html
@@ -4,10 +4,10 @@
   <p>以下為金魚愛好者廣泛使用且口碑良好的品牌，適合日常飼養與健康維持：</p>
 
   <ul style="line-height:1.8; font-size:1.05em;">
-    <li>🇯🇵 <strong>日本高夠力 Hikari</strong> — 經典穩定配方，腸胃適口性佳。</li>
-    <li>🇹🇼 <strong>台灣鮮蝦食譜 Ultra Fresh</strong> — 天然蝦紅素與高蛋白成分。</li>
-    <li>🇵🇱 <strong>波蘭德比克 Tropical</strong> — 多樣化飼料類型，適合不同魚齡。</li>
-    <li>🇩🇪 <strong>德國丹尼爾 Dennerle</strong> — 歐系高品質配方，水質穩定性高。</li>
+    <p>🇯🇵 <strong>日本高夠力 Hikari</strong> — 經典穩定配方，腸胃適口性佳。</p>
+    <p>🇹🇼 <strong>台灣鮮蝦食譜 Ultra Fresh</strong> — 天然蝦紅素與高蛋白成分。</p>
+    <p>🇵🇱 <strong>波蘭德比克 Tropical</strong> — 多樣化飼料類型，適合不同魚齡。</p>
+    <p>🇩🇪 <strong>德國丹尼爾 Dennerle</strong> — 歐系高品質配方，水質穩定性高。</p>
   </ul>
 
   <p style="text-align:center; color:#e8953c; font-weight:bold; margin-top:20px;">
