Change list items to paragraphs in feed-season.html

--- a/feed/feed-season.html
+++ b/feed/feed-season.html
@@ -13,8 +13,8 @@
   <p>💦 金魚和人一樣，在不同季節會有不同的代謝狀態：</p>
 
   <ul style="line-height:1.8;">
-    <li><strong>夏季：</strong>氣溫高、代謝快、消化力強，餵食量可略多。</li>
-    <li><strong>冬季：</strong>氣溫低、代謝慢、活動力下降，餵食量需減少。</li>
+    <p><strong>夏季：</strong>氣溫高、代謝快、消化力強，餵食量可略多。</p>
+    <p><strong>冬季：</strong>氣溫低、代謝慢、活動力下降，餵食量需減少。</p>
   </ul>
 
   <h3>⏰ 餵食時機</h3>
