--- a/feed/wakogan-usage.html
+++ b/feed/wakogan-usage.html
@@ -11,25 +11,25 @@
 
   <h3>⭕️ 使用頻率</h3>
   <ul style="line-height:1.8;">
-    <li>一個月一次即可。</li>
-    <li><strong>若元錠為日常保健用途</strong>，非腸炎治療藥。</li>
-    <li><strong>食用當天需禁食</strong>，不可同時餵飼料。</li>
+    <p>一個月一次即可。</p>
+    <p><strong>若元錠為日常保健用途</strong>，非腸炎治療藥。</p>
+    <p><strong>食用當天需禁食</strong>，不可同時餵飼料。</p>
   </ul>
 
   <h3>🔅 用量與操作</h3>
   <ul style="line-height:1.8;">
-    <li>一隻魚對應一顆，食用時可對半分開。</li>
-    <li>不需擔心過量問題，多餘部分會自行代謝。</li>
-    <li>餵食後 30 分鐘內關閉沉水馬達（沉馬）。</li>
-    <li>若水質因藥粉而霧化屬正常現象。</li>
-    <li>約 40 分鐘後<strong>換水 70%</strong>，換水時注意溫差。</li>
+    <p>一隻魚對應一顆，食用時可對半分開。</p>
+    <p>不需擔心過量問題，多餘部分會自行代謝。</p>
+    <p>餵食後 30 分鐘內關閉沉水馬達（沉馬）。</p>
+    <p>若水質因藥粉而霧化屬正常現象。</li>
+    <p>約 40 分鐘後<strong>換水 70%</strong>，換水時注意溫差。</p>
   </ul>
 
   <h3>⚠️ 換水注意事項</h3>
   <ul style="line-height:1.8;">
-    <li>換水前先關閉揚馬，以防空燒。</li>
-    <li>沉馬可保持開啟，幫助循環。</li>
-    <li>建議餵食模式：餵食 10 分 → 休息 20 分 → 再啟動沉馬 → 30–40 分後換水。</li>
+    <p>換水前先關閉揚馬，以防空燒。</p>
+    <p>沉馬可保持開啟，幫助循環。</p>
+    <p>建議餵食模式：餵食 10 分 → 休息 20 分 → 再啟動沉馬 → 30–40 分後換水。</p>
   </ul>
 
   <p style="text-align:center; color:#e8953c; font-weight:bold;">
