Change growth factors list to paragraphs
Replaced list items with paragraph elements for growth factors.

--- a/knowledge/goldfish-growth-factors.html
+++ b/knowledge/goldfish-growth-factors.html
@@ -3,11 +3,11 @@
   <p>金魚的成長受多種因素共同影響，從先天條件到後天照養，缺一不可。</p>
 
   <ul style="text-align:left; max-width:500px; margin:auto; line-height:1.8;">
-    <li>💧 <b>基因：</b> 決定金魚的體型、顏色、頭型與潛在成長極限。</li>
-    <li>💧 <b>環境：</b> 穩定寬敞的水體與合適密度能降低壓力、促進發育。</li>
-    <li>💧 <b>光照：</b> 適當光照能刺激色素細胞與代謝，讓體色更鮮明。</li>
-    <li>💧 <b>水質：</b> 乾淨、含氧量充足、氨氮低的水體，是健康生長的基礎。</li>
-    <li>💧 <b>飼料：</b> 均衡多樣的營養攝取，有助頭瘤、體型與色澤的發展。</li>
+    <p>💧 <b>基因：</b> 決定金魚的體型、顏色、頭型與潛在成長極限。</p>
+    <p>💧 <b>環境：</b> 穩定寬敞的水體與合適密度能降低壓力、促進發育。</p>
+    <p>💧 <b>光照：</b> 適當光照能刺激色素細胞與代謝，讓體色更鮮明。</p>
+    <p>💧 <b>水質：</b> 乾淨、含氧量充足、氨氮低的水體，是健康生長的基礎。</p>
+    <p>💧 <b>飼料：</b> 均衡多樣的營養攝取，有助頭瘤、體型與色澤的發展。</p>
   </ul>
 
   <p style="margin-top:20px; font-weight:bold; color:#3b6e68;">
