Fix missing .html extension in links
Updated links to include .html extension for proper loading.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,6 @@
             <li><a href="#" onclick="loadPage('./filter/filter-system-4ft-bottom.html', this)">四尺底濾改乾濕分離配置</a></li>
             <li><a href="#" onclick="loadPage('./filter/filter-system-5ft.html', this)">五尺缸配置實例</a></li>
             <li><a href="#" onclick="loadPage('./filter/filter-7ft.html', this)">七尺缸配置實例</a></li>
-
-            <!-- 🟧 這行你原本缺 .html，我幫你補上讓它能載 -->
             <li><a href="#" onclick="loadPage('./filter/filter-aba.html', this)">雅柏</a></li>
           </ul>
         </li>
@@ -142,7 +140,7 @@
         <li>
           <span>‼️ 金魚有狀況</span>
           <ul>
-            <li>魚醫生</li>
+            <li><a href="#" onclick="loadPage('./fish-problem/fish-docter.html', this)">魚醫生,</a></li>
             <li>白點</li>
             <li>腸炎症狀和預防</li>
             <li>如何判斷魚病了</li>
