Update link for white spot treatment in index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <span>‼️ 金魚有狀況</span>
           <ul>
             <li><a href="#" onclick="loadPage('./fish-problem/fish-docter.html', this)">魚醫生,</a></li>
-            <li>白點</li>
+            <li><a href="#" onclick="loadPage('./fish-problem/withedodo.html', this)">白點</a></li>
             <li>腸炎症狀和預防</li>
             <li>如何判斷魚病了</li>
           </ul>
