--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <li><a href="#" onclick="loadPage('./simple/basic-care.html', this)">金魚基本飼養方式及配備</a></li>
             <li>新手必看視頻</li>
             <li>為什麼要換水</li>
-            <li><a href="#" onclick="loadPage('./simple/water-cost.html', this)">水費貴嗎</li>
+            <li><a href="#" onclick="loadPage('./simple/water-cost.html', this)">水費貴嗎</a></li>
             <li>打氣機的作用</li>
             <!-- 影片12 -->
             <li>濾材問題</li>
             <li>濾材的選擇</li>
-            <li>濾材為什麼不要泡水</li>
+            <li><a href="#" onclick="loadPage('./simple/filter-why-dry.html', this)">濾材為什麼不要泡水</a></li>
             <li>養魚方法真的百百種嗎</li>
             <li>魚友經驗分享</li>
             <li>金魚養殖鑑古推今</li>
