Update goldfish shop link in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>魚友經驗分享</li>
             <!-- 影片11 -->
             <li>金魚養殖鑑古推今</li>
-            <li>金魚店推薦</li>
+            <li><a href="#" onclick="loadPage('./simple/goldfish-shops.html', this)">金魚店推薦</li>
           </ul>
         </li>
 
