Improve image layout and styling in basic-care.html
Updated image styling for better presentation.

--- a/simple/basic-care.html
+++ b/simple/basic-care.html
@@ -6,16 +6,18 @@
   </p>
 
   <!-- 金魚照片 -->
-  <div class="gallery">
+  <div style="display:flex; justify-content:center; margin:25px 0;">
     <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/蘭壽金魚方式.jpg"
          alt="蘭壽金魚"
-         loading="lazy">
+         loading="lazy"
+         style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
   </div>
 
-  <div class="gallery">
+  <div style="display:flex; justify-content:center; margin:25px 0;">
       <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/獅頭金魚方式.jpg"
          alt="獅頭金魚"
-         loading="lazy">
+         loading="lazy"
+         style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
   </div>
 
   <!-- 基礎環境 -->
