Change list items to paragraphs in nitrifying.html

--- a/filter/nitrifying.html
+++ b/filter/nitrifying.html
@@ -7,9 +7,9 @@
 
   <h3>🦠 菌群與原蟲的平衡關係</h3>
   <ul style="line-height:1.8;">
-    <li>菌量越高，原蟲也越多，因為死亡的菌會成為原蟲的食物。</li>
-    <li>菌與菌、菌與原蟲都會競爭有限的養分。</li>
-    <li>若菌量過高，整體生態容易失衡。</li>
+    <p>菌量越高，原蟲也越多，因為死亡的菌會成為原蟲的食物。</p>
+    <p>菌與菌、菌與原蟲都會競爭有限的養分。</p>
+    <p>若菌量過高，整體生態容易失衡。</p>
   </ul>
 
   <p>
