--- a/feed/feed-season.html
+++ b/feed/feed-season.html
@@ -20,7 +20,7 @@
   <h3>⏰ 餵食時機</h3>
   <p>
     餵食金魚的最佳時間為<strong>早晨</strong>，此時魚的活動力與代謝最旺盛；  
-    晚上則因代謝變慢，應避免大量餵食，以防腸胃負擔。
+    晚上則因代謝變慢，應避免大量餵食，以防腸道負擔。
   </p>
 
   <p style="text-align:center; color:#e8953c; font-weight:bold;">
