Update image source for wakogan-usage.html

--- a/feed/wakogan-usage.html
+++ b/feed/wakogan-usage.html
@@ -3,7 +3,7 @@
 
   <!-- 圖片（若有產品照可上傳） -->
   <div style="display:flex; justify-content:center; margin:25px 0;">
-    <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/wakogan.jpg"
+    <img src="image/wakogan.jpg"
          alt="若元錠使用方式"
          loading="lazy"
          style="max-width:85%; height:auto; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
