Update filter description for 二尺缸配置
Removed specific fish types from the description.

--- a/filter/2system.html
+++ b/filter/2system.html
@@ -14,7 +14,7 @@
     <h3>🌿 二尺缸配置概述</h3>
     <p>
       本實例為二尺缸（60 × 45 × 45 cm）配置，採用上部三層滴流過濾系統。<br>
-      此設計能有效分層過濾、維持水質穩定，適合中等密度的蘭壽、泰獅等金魚飼養。
+      此設計能有效分層過濾、維持水質穩定。
     </p>
   </div>
 
