Reorganize summer heat tips in HTML structure

--- a/content/daily-summer-heat.html
+++ b/content/daily-summer-heat.html
@@ -1,17 +1,5 @@
 <div class="card">
   <h2>☀️ 夏季魚缸應對高溫注意事項</h2>
-
-  <!-- 說明文字 -->
-  <p>01. 散熱與通風非常重要，保持魚缸周圍空氣流通。</p>
-  <p>02. 滴流盒孔洞勿封死，確保氣流與水流暢通。</p>
-  <p>03. 使用電風扇吹水面，幫助降溫與增加氧氣溶解度。</p>
-  <p>04. 勤換水，但要注意新舊水溫差不超過 ±3°C。</p>
-  <p>05. 高溫時耗氧量上升，記得加強打氣與水流循環。</p>
-
-  <p style="text-align:center; font-weight:bold; color:#0077b6; margin-top:20px;">
-    💧 沒事多換水，多換水沒事 💧
-  </p>
-
   <!-- 可選圖片（上傳後再加） -->
   <!--
   <div style="text-align:center; margin-top:20px;">
@@ -20,5 +8,19 @@
          loading="lazy"
          style="max-width:90%; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.25);">
   </div>
+
+  
+  <!-- 說明文字 -->
+  <div class="section yellow">
+    <p>01. 散熱與通風非常重要，保持魚缸周圍空氣流通。</p>
+    <p>02. 滴流盒孔洞勿封死，確保氣流與水流暢通。</p>
+    <p>03. 使用電風扇吹水面，幫助降溫與增加氧氣溶解度。</p>
+    <p>04. 勤換水，但要注意新舊水溫差不超過 ±3°C。</p>
+    <p>05. 高溫時耗氧量上升，記得加強打氣與水流循環。</p>
+  </div>
+  
+  <p style="text-align:center; font-weight:bold; color:#0077b6; margin-top:20px;">
+    💧 沒事多換水，多換水沒事 💧
+  </p>
   -->
 </div>
