Refactor HTML structure for typhoon fasting content

--- a/content/special-typhoon-fasting.html
+++ b/content/special-typhoon-fasting.html
@@ -10,20 +10,23 @@
   </div>
 
   <!-- 重點 -->
-  <p style="line-height:1.8; font-size:1.05em;">
-    <strong>季節氣候變化時，大氣壓力會劇烈改變，</strong><br>
-    缸內菌相會隨之變化，進而影響魚隻腸道菌。<br>
-    而颱風前後水質往往不穩定，加上停水、停電的可能，<br>
-    <strong>禁食是降低風險最好的做法。</strong>
-  </p>
+  <div class="section yellow">
+    <p style="line-height:1.8; font-size:1.05em;">
+      <strong>季節氣候變化時，大氣壓力會劇烈改變，</strong><br>
+      缸內菌相會隨之變化，進而影響魚隻腸道菌。<br>
+      而颱風前後水質往往不穩定，加上停水、停電的可能，<br>
+      <strong>禁食是降低風險最好的做法。</strong>
+    </p>
+  </div>
 
-  <h3 style="color:#2563eb;">💡 額外建議</h3>
-  <ul style="line-height:1.8; margin-left:20px;">
-    <p>換水時先確認自來水是否正常（顏色、氣味）。</p>
-    <p>備妥 <strong>不斷電打氣機</strong> 以防停電缺氧。</p>
-    <p>若水塔為共用，建議加入 <strong>三胞胎濾水裝置</strong>。</p>
-  </ul>
-
+  <div class="section blue">
+    <h3 style="color:#2563eb;">💡 額外建議</h3>
+    <ul style="line-height:1.8; margin-left:20px;">
+      <p>換水時先確認自來水是否正常（顏色、氣味）。</p>
+      <p>備妥 <strong>不斷電打氣機</strong> 以防停電缺氧。</p>
+      <p>若水塔為共用，建議加入 <strong>三胞胎濾水裝置</strong>。</p>
+    </ul>
+  </div>
   <p style="text-align:center; margin-top:20px; color:#e67e22; font-weight:bold;">
     💧換水注意溫差與水質，禁食是預防最好的保險💧
   </p>
