Convert list items to paragraph format in instructions

--- a/buyfish/how-to-turn-gills.html
+++ b/buyfish/how-to-turn-gills.html
@@ -14,25 +14,31 @@
 
   <p>一律建議在缸內操作，對鰓比較不會造成傷害。</p>
 
+  <div class="section yellow">
   <h3>翻鰓步驟</h3>
   <ol style="line-height:1.8;">
-    <li>將魚壓在缸壁，如影片示範。</li>
-    <li>用大拇指從鰓上緣慢慢切下來，魚鰓即會打開。</li>
-    <li>過程無需用太大力氣，另一邊同理。</li>
-    <li>魚反過來從下緣慢慢切下，也可清楚看到鰓的狀態。</li>
+    <p>1.將魚壓在缸壁，如影片示範。</p>
+    <p>2.用大拇指從鰓上緣慢慢切下來，魚鰓即會打開。</p>
+    <p>3.過程無需用太大力氣，另一邊同理。</li>
+    <p>4.魚反過來從下緣慢慢切下，也可清楚看到鰓的狀態。</p>
   </ol>
+  </div>
 
+  <div class="section blue">
   <h3>⚠️ 注意事項</h3>
-  <ul style="line-height:1.8;">
-    <li>魚在掙扎時請勿硬翻，待魚平靜再操作。</li>
-    <li>魚沒事時不需頻繁翻鰓，以免造成壓力與傷害。</li>
-  </ul>
+    <ul style="line-height:1.8;">
+      <p>魚在掙扎時請勿硬翻，待魚平靜再操作。</p>
+      <p>魚沒事時不需頻繁翻鰓，以免造成壓力與傷害。</p>
+    </ul>
+  </div>
 
+  <div class="section white">
   <h3>為何不建議拿出水面檢查？</h3>
-  <ul style="line-height:1.8;">
-    <li>魚鰓接觸空氣的影響我們無法確定，風險較高。</li>
-    <li>魚鰓露出水面會往下塌，使判斷有無異常更困難。</li>
-  </ul>
+    <ul style="line-height:1.8;">
+      <p>魚鰓接觸空氣的影響我們無法確定，風險較高。</p>
+      <p>魚鰓露出水面會往下塌，使判斷有無異常更困難。</p>
+    </ul>
+  </div>
 
   <!-- 影片區塊 -->
   <div style="text-align:center; margin:25px 0;">
