Change section class from blue to yellow

--- a/content/daily-isolated-waterchange.html
+++ b/content/daily-isolated-waterchange.html
@@ -8,7 +8,7 @@
          style="max-width:90%; height:auto; border-radius:15px; box-shadow:0 4px 12px rgba(0,0,0,0.25);">
   </div>
 
-  <div class="section blue">
+  <div class="section yellow">
     <p>換水讓魚康復的前提是<strong>讓魚自己的免疫能力發揮作用</strong>，盡量不要讓系統菌量影響魚況。</p>
   
     <p>由於餵食消化需要耗費體力，所以期間應配合<strong>「禁食」</strong>，讓魚把能量盡量支配在免疫系統上。</p>
