Remove redundant text from filter-system-5ft.html

--- a/filter/filter-system-5ft.html
+++ b/filter/filter-system-5ft.html
@@ -46,7 +46,7 @@
     </ul>
     <p>
       第三層陶瓷環集中放置於中間，左右兩側可留空以確保落水暢通。<br>
-      濾材搭配上以「流速穩、氣體交換充分」為原則，羊毛絨比例宜多於石材。
+      濾材搭配上以「流速穩、氣體交換充分」為原則。
     </p>
   </div>
 
