Update maintenance frequency for ceramic rings

--- a/filter/filter-system-5ft.html
+++ b/filter/filter-system-5ft.html
@@ -65,9 +65,9 @@
     <h3>🧾 維護與更換頻率</h3>
     <ul style="line-height:1.8;">
       <li>羊毛絨：依污染情況隨時更換，建議每週檢查一次。</li>
-      <li>陶瓷環：每 3–6 個月更換 1/3，保持菌相穩定。</li>
+      <li>陶瓷環：每 3–6 個月更換。</li>
       <li>排水板：確保無堵塞、保持通風乾燥。</li>
-      <li>建議每 2–3 週觀察流速變化，必要時清理雨淋管或濾槽底部。</li>
+      <li>每月清理管路。</li>
     </ul>
   </div>
 
