Fix HTML formatting in withedodo.html

--- a/fish-problem/withedodo.html
+++ b/fish-problem/withedodo.html
@@ -24,7 +24,7 @@
 
     <div class="section white" style="margin-top:18px;">
       <p>💧 白點通常會從「少 → 多 → 顆粒變粗 → 掉落」，請耐心觀察至完全消失後再恢復餵食。</p>
-      <p>💡 治療結束後記得更換 <strong>第一層白棉或羊毛絨</strong> 濾材。</p>
+      <p>💡 治療結束後記得更換 <strong>第一層白棉或羊毛絨</strong>。</p>
     </div>
   </div>
 
