Add link to summer notes in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><a href="#" onclick="loadPage('./content/daily-tank-move.html', this)">移缸經驗分享</a></li>
             <li><a href="#" onclick="loadPage('./content/daily-summer-heat.html', this)">夏季魚缸應對高溫注意事項</a></li>
             <li><a href="#" onclick="loadPage('./content/daily-hotwater-change.html', this)">普力桶尺寸與夏季高溫換水應變方式</a></li>
-            <li>夏季注意事項</li>
+            <li><a href="#" onclick="loadPage('./content/summer-note.html', this)">夏季注意事項</a></li>
             <li><a href="#" onclick="loadPage('./content/daily-salt-guide.html', this)">下鹽</a></li>
             <li><a href="https://taiwangoldfish.github.io/MLE/" target="_blank">下鹽計算機</a></li>
             <li><a href="https://taiwangoldfish.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
