Update link for pre-travel video instructions

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><a href="https://taiwangoldfish.github.io/fish-tank-circulation/" target="_blank">魚缸水循環計算器</a></li>
             <li><a href="#" onclick="loadPage('./content/daily-travel-response.html', this)">出國出遠門應變措施</a></li>
             <li>出國回國魚缸經驗分享</li>
-            <li>出國前操作-影片</li>
+            <li><a href="#" onclick="loadPage('./content/before-travel.html', this)">出國前操作-影片</a></li>
             <li>回國後操作-影片</li>
             <li>颱風天的養魚對應措施</li>
             <li><a href="#" onclick="loadPage('./content/special-typhoon-fasting.html', this)">颱風天為何禁食</a></li>
