Update image source URLs for quarantine record

--- a/buyfish/quarantine-without-filter-material.html
+++ b/buyfish/quarantine-without-filter-material.html
@@ -4,11 +4,11 @@
   <h3 style="color:#e8953c; margin-top:30px;">📸無濾材檢疫全紀錄 1</h3>
   <!-- 📸 無濾材檢疫全紀錄 1 -->
   <div style="text-align:center; margin:35px 0;">
-    <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/無濾材檢疫全紀錄/1"
+    <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/無濾材檢疫全紀錄/1.jpg"
          alt="無濾材檢疫全紀錄"
          loading="lazy"
          style="width:95%; max-width:900px; border-radius:16px; box-shadow:0 6px 12px rgba(0,0,0,0.25);">
-      <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/無濾材檢疫全紀錄/2"
+      <img src="https://raw.githubusercontent.com/michael19980508/index/main/image/無濾材檢疫全紀錄/2.jpg"
          alt="無濾材檢疫全紀錄"
          loading="lazy"
          style="width:95%; max-width:900px; border-radius:16px; box-shadow:0 6px 12px rgba(0,0,0,0.25);">
