Update temperature settings recommendation

--- a/filter/filter-system-5ft.html
+++ b/filter/filter-system-5ft.html
@@ -77,7 +77,7 @@
     <p>
       五尺缸屬於高水位缸，建議加裝溢水防護與備用斷電保護器。<br>
       定期檢測插座電流與溫控器運作，避免高溫或短路風險。<br><br>
-      📌 <strong>溫控設定建議：</strong>冬季 28–30°C，夏季可拔除加熱棒。
+      📌 <strong>溫控設定建議：</strong>冬季維持 27°C，不要低於 25°C，夏季可拔除加熱棒。
     </p>
   </div>
 
