Add cleaning suggestions section to bot-flow-and-clean.html

--- a/iteam/bot-flow-and-clean.html
+++ b/iteam/bot-flow-and-clean.html
@@ -27,6 +27,7 @@
     </div>
   </div>
 
+  <div class="section white">
   <!-- 備註與小提示 -->
   <div style="margin-top:20px; text-align:left; line-height:1.8;">
     <p>🔹 <strong>清潔建議：</strong></p>
@@ -40,4 +41,5 @@
   <p style="text-align:center; color:#0284c7; margin-top:25px; font-weight:bold;">
     💧 沒事多換水，多換水沒事 💧
   </p>
+  </div>
 </div>
