Change section colors in tank background DIY page

--- a/iteam/tank-background-diy.html
+++ b/iteam/tank-background-diy.html
@@ -6,12 +6,11 @@
     分享如何自行貼魚缸背景貼紙，簡單又省錢！  
     以下為實際操作步驟與工具說明，適合想要美化魚缸背景的魚友。
   </p>
-
+</div>
   <!-- 🧰 工具說明 -->
-  <div class="section yellow">
+  <div class="section blue">
     <h3 style="color:#e8953c;">🧰 需要準備的工具</h3>
     <p>圖 2：背景圖、刮板、泡泡水、濕紙巾</p>
-  </div>
 
   <!-- 📸 圖片區 -->
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin:25px 0;">
@@ -36,7 +35,7 @@
   </div>
   </div>
 
-  <div class="section blue">
+  <div class="section white">
   <!-- 🎥 教學影片 -->
   <div style="text-align:center; margin:25px 0;">
     <iframe width="90%" height="450"
