Update water quality and lighting recommendations

--- a/simple/basic-care.html
+++ b/simple/basic-care.html
@@ -33,7 +33,7 @@
   <div class="section blue">
     <h3>💧 水質管理</h3>
     <p>
-      金魚對水質變化敏感，維持水溫 24–28°C、pH 6.8–7.4。<br>
+      金魚對水質變化敏感，維持水溫 24–28°C，pH值大於 7 不為酸性即可。<br>
       有餵有換水，換水時注意溫差不超過 ±3°C。
     </p>
   </div>
@@ -50,7 +50,7 @@
   <div class="section yellow">
     <h3>💡 照明與觀察</h3>
     <p>
-      建議每日光照 8–12 小時，使用全光譜或 4000K 色溫燈具。<br>
+      建議每日光照 8–12 小時，燈具 4000K ~ 6000K，色溫 4000K ~ 6000K。<br>
       晚上關燈，讓金魚休息，有助生理調節與發色。
     </p>
   </div>
