Update usage conditions for salt treatment
Removed reference to 梨形四膜蟲 from usage conditions.

--- a/content/daily-salt-guide.html
+++ b/content/daily-salt-guide.html
@@ -31,7 +31,7 @@
   <div class="section white">
     <h3 style="color:#dc2626;">🔸 千分之3 = 0.3% 鹽（1 公升 + 3 克鹽）</h3>
     <p style="line-height:1.8;">
-      使用時機：魚隻出現原蟲性感染（如白點、梨形四膜蟲）<br>
+      使用時機：魚隻出現原蟲性感染（如白點）<br>
       或低水溫時出現水黴（傷口處像蒲公英花一樣開花）。<br>
       <strong>處理方法：</strong>升溫至 28°C（每天最多升 2°C），<br>
       搭配每日換水 50～80%，維持鹽度。
