Update equipment configuration recommendation

--- a/filter/2system.html
+++ b/filter/2system.html
@@ -37,7 +37,7 @@
   <div class="section white">
     <h3>⚙️ 設備配置建議</h3>
     <ul style="line-height:1.8;">
-      <li><strong>沉水馬達：</strong>博特（Botter）。</li>
+      <li><strong>沉水馬達：</strong>博特。</li>
       <li><strong>燈具：</strong>萌蟲燈（光譜自然柔和）。</li>
       <li><strong>氣泡石：</strong>放置於沉馬後方約 10 公分高位置，
         利用水流循環將底部糞便帶往濾區。<br>
